[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Element.gd" type="Script" id=1]
[ext_resource path="res://assets/Room/smartphone.png" type="Texture" id=2]

[node name="ElementSprite" type="Area2D"]
position = Vector2( 431.512, 226.244 )
script = ExtResource( 1 )
texture = ExtResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
